migrate to beast 2.8. compiles but is not yet tested #2
now relies on maven for all dependencies and building, instead of maven+ant. now utilises new strong-typed parameters. qNT.xml is the only example file updated as of now and does run with beast3