@@ -1,9 +1,9 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.github.linguaphylo</groupId>
+        <groupId>io.github.jsaghafifar</groupId>
         <artifactId>abyss-root</artifactId>
-        <version>${revision}</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>abyss-lphybeast</artifactId>
@@ -16,16 +16,59 @@
         </dependency>
 
         <dependency>
-            <groupId>io.github.linguaphylo</groupId>
+            <groupId>io.github.jsaghafifar</groupId>
             <artifactId>abyss-beast</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>io.github.linguaphylo</groupId>
+            <groupId>io.github.jsaghafifar</groupId>
             <artifactId>abyss-lphy</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
+    <properties>
+        <lphybeast.args/>
+    </properties>
+
+    <build>
+        <plugins>
+            <!-- mvn -pl calibratedcpp-lphybeast exec:exec -Dlphybeast.args="convert examples/CPPTree.lphy" -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <executable>java</executable>
+                    <classpathScope>compile</classpathScope>
+                    <commandlineArgs>-Dpicocli.disable.closures=true --module-path %classpath --add-modules ALL-MODULE-PATH -m lphy.beast/lphybeast.LPhyBeastMain ${lphybeast.args}</commandlineArgs>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.7.1</version>
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/assembly/abyss-lphybeast-assembly.xml</descriptor>
+                    </descriptors>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <finalName>${project.artifactId}-${project.version}</finalName>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
